# My_Agent_Project

./: .env.example  .gitignore  README.md
libs/chatchat-server/: alembic.ini  build_cpp.py  check_response.py  debug_multi_query.py  pyproject.toml  setup_cpp.py  test_memory.py  test_multi_query.py  upload_test_docs.py
libs/chatchat-server/benchmarks/: benchmark_tokenizer.py
libs/chatchat-server/chatchat/: cli.py  env.py  pydantic_settings_file.py  settings.py  startup.py
libs/chatchat-server/chatchat/cpp_ext/: .gitignore  CMakeLists.txt  __init__.py  bindings.cpp  tokenizer.cpp  tokenizer.hpp
libs/chatchat-server/chatchat/frontend/: package-lock.json  package.json  vite.config.ts
libs/chatchat-server/chatchat/frontend/src/: components.d.ts  env.d.ts
libs/chatchat-server/chatchat/server/: app_state.py  context.py  utils.py
libs/chatchat-server/chatchat/server/agents_registry/: agents_registry.py
libs/chatchat-server/chatchat/server/api_server/: auth_routes.py  chat_routes.py  kb_routes.py  server_app.py  server_routes.py  tenant_routes.py
libs/chatchat-server/chatchat/server/auth/: auth.py  dependencies.py
libs/chatchat-server/chatchat/server/chat/: chat.py  feedback.py  file_chat.py  kb_chat.py
libs/chatchat-server/chatchat/server/db/: base.py  manager.py  seed.py  session.py  session_async.py
libs/chatchat-server/chatchat/server/knowledge_base/: kb_api.py  kb_doc_api.py  kb_summary_api.py  migrate.py  utils.py
libs/chatchat-server/langchain_chatchat/chat_models/: base.py
scripts/: test_search.py
(+175 files in other folders)
